# cremniy

src/: CMakeLists.txt
src/Modules/References/KeyboardScancodes/: keyboardscancodevizwidget.cpp
src/Modules/Tabs/CodeEditor/: CMakeLists.txt
src/Modules/Tabs/STM32Pinout/: CMakeLists.txt  stm32pinout.cpp  stm32pinout.h
src/app/WelcomeWindow/: welcomeform.cpp  welcomeform.h
src/dialogs/: settingsdialog.cpp
src/resources/styles/: dark.qss
